Basic Website Working

--- a/success.html
+++ b/success.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <title>Halvex Discord Linking</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="utils.js"></script>
 </head>
 <body>
-<div id="rounded">
-    <img src="https://halvex.net/img/header/logo.png" alt="Halvex Logo" width="30%">
+<div id="rounded-blue">
+    <img src="https://halvex.net/img/header/logo.png" id="halvex" alt="Halvex Logo">
     <h1>Halvex Discord Linking Complete!</h1>
-    <h4>Thank you for connecting your Discord with the Halvex billing panel! Return back to Discord and enjoy your new role!</h4>
+    <h4>Thank you for connecting your Discord with the Halvex billing panel! Return back to Discord to enjoy your new
+        role! For more information about linking or unlinking, use the /link or /unlink command in Discord.</h4>
+    <div id="rounded-purple">
+        <div class="container">
+            <div class="image">
+                <img src="" id="avatar" alt="Discord Temp">
+            </div>
+            <div class="text">
+                <h4 id="username"></h4>
+                <h4 id="id"></h4>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
